<resources>
    <string name="app_name">Recorder</string>
    <string name="instructions">Instructions</string>
    <string name="start_rec">Start recording</string>
    <string name="stop_rec">Stop recording</string>
    <string name="wait_rec">Wait until finish recording</string>
    <string name="start_play">Start playing</string>
    <string name="stop_play">Stop playing</string>
    <string name="wait_play">Wait until finish playing</string>
    <string name="robotIP">Set the robot\'s IP</string>
    <string name="testConnection">Test connection</string>
    <string name="connectionError">Sorry, we\'re unable to connect to the robot</string>
    <string name="connected">Connection successful</string>
    <string name="disconnected">First test your connection</string>
    <string name="ip">192.168.43.21</string>
    <string name="invalid_ip">IP number not valid</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="sign_in">Sign in</string>
    <string name="error_sign_in">Sign in failed.</string>
    <string name="register">Register</string>
    <string name="registerInstr">Please fill in your name and record your name and the commands first.</string>
    <string name="recordName">Record your name</string>
    <string name="recordingName">Please say your name clearly.</string>
    <string name="finishRecording">Finished recording.</string>
    <string name="labelName">Name</string>
    <string name="recordingGo">Record Go</string>
    <string name="recordingStop">Record Stop</string>
    <string name="recordingLeft">Record Left</string>
    <string name="recordingRight">Record Right</string>
    <string name="correctRegister">Register successful, you can log in now.</string>
    <string name="commandNotFound">Command not found. Try again</string>
    <string name="logo">Logo</string>
    <string name="go">Go</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="stop">Stop</string>
</resources>
