<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="unal.informacion.teoria.recorder.MainActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:layout_marginTop="32dp"
        android:layout_alignParentTop="true"
        android:gravity="center"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/start_play"
            android:layout_weight="2"
            android:id="@+id/player"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="playClick"/>

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/start_rec"
            android:layout_weight="2"
            android:id="@+id/rec"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="recordClick"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="59dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/robotIP"
            android:id="@+id/robotIP"
            android:labelFor="@+id/inputRobotIP"
            android:layout_weight="2" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/inputRobotIP"
            android:text="@string/ip"
            android:inputType="phone"
            android:layout_weight="2" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testConnection"
        android:id="@+id/testConnection"
        android:onClick="testConnection"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
